[package]
name = "dough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fastrand = "2.1.0"
image = "0.25.1"
indicatif = { version = "0.17.8", features = ["rayon", "improved_unicode"] }
rayon = "1.10.0"

[dev-dependencies]
regex = "1.10.4"
